# Chat-Car-Agent-IA

./: .gitignore  Makefile  README.md  carros.csv  compose.yml  pyproject.toml  requirements.txt
code/: client.py  config_db.py  helpers.py  server.py
